Zap logging and request limit

--- a/config/config.dev.toml
+++ b/config/config.dev.toml
@@ -3,12 +3,12 @@ title = "Example minosse configuration"
 [minosse]
 server = "0.0.0.0"
 port = 8080
-log = "debug"
+log = 0
 
   [minosse.connections]
   readTimeout = 30
   writeTimeout = 30
-  maxConnections = 0
+  maxConnections = 100
 
 [zap]
 mode = "development"
