--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -1,7 +1,9 @@
-FROM alpine:3.12
+FROM debian
 
 WORKDIR /web
 COPY minosse /usr/bin/
+COPY public /web/public
+COPY config /web/config
 RUN ["chmod", "+x", "/usr/bin/minosse"]
 
 CMD ["minosse"]
