--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian
 
 WORKDIR /web
-COPY minosse /usr/bin/
+COPY benchmark/minosse /usr/bin/
 COPY public /web/public
 COPY config /web/config
 RUN ["chmod", "+x", "/usr/bin/minosse"]
